exports[`test renders appropriately 1`] = `
<h3>
  Monthly Billing
  <a
    className="update-card"
    href="#"
    onClick={[Function]}>
    Update Credit Card
  </a>
</h3>
`;

exports[`test renders appropriately without Stripe customer ID 1`] = `
<h3>
  Monthly Billing
</h3>
`;
